# Ai-project

./: README.md  __init__.py  adaptation.py  cli.py  core.py  cyber-os-v5.lisp  introspection.py  pyproject.toml  quantum_ai.lisp  reflection.py  requirements.txt  simulation.py
adaptive_cognitive_framework/: __init__.py  adaptation.py  core.py  introspection.py  reflection.py  simulation.py
tests/: test_agent.py  test_persistence.py  test_simulation.py
