[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_cognitive_framework"
version = "0.1.0"
description = "A lightweight framework for self-monitoring adaptive agents"
readme = "README.md"
authors = [
  { name = "Jules", email = "jules@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]
extras = [
    "loguru",
    "scikit-learn",
    "matplotlib",
    "flask",
    "fastapi",
    "uvicorn",
    "wandb",
    "jupyterlab",
    "mkdocs",
    "mkdocs-material",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptive_cognitive_framework*"]
